@@ -22,13 +22,9 @@
 // THE SOFTWARE.
 package com.microsoft.identity.labapi.utilities.authentication;
 
-import com.microsoft.identity.internal.test.keyvault.ApiException;
-import com.microsoft.identity.internal.test.keyvault.Configuration;
-import com.microsoft.identity.internal.test.keyvault.api.SecretsApi;
 import com.microsoft.identity.labapi.utilities.authentication.client.ConfidentialAuthClientFactory;
 import com.microsoft.identity.labapi.utilities.authentication.client.IConfidentialAuthClient;
 import com.microsoft.identity.labapi.utilities.exception.LabApiException;
-import com.microsoft.identity.labapi.utilities.exception.LabError;
 
 import lombok.NonNull;
 
@@ -37,10 +33,6 @@ import lombok.NonNull;
  */
 public class LabApiAuthenticationClient implements IAccessTokenSupplier {
 
-    private final static String SECRET_NAME_LAB_APP_ID = "LabVaultAppID";
-    private final static String SECRET_NAME_LAB_APP_SECRET = "LabVaultAppSecret";
-    private final static String SECRET_VERSION = "";
-    private final static String KEY_VAULT_API_VERSION = "2016-10-01";
     private final static String SCOPE = "https://msidlab.com/.default";
 
     private final static String TENANT_ID = "72f988bf-86f1-41af-91ab-2d7cd011db47";
@@ -48,21 +40,14 @@ public class LabApiAuthenticationClient implements IAccessTokenSupplier {
     private final static String AUTHORITY = "https://login.microsoftonline.com/" + TENANT_ID;
 
     private final IConfidentialAuthClient mConfidentialAuthClient;
-    private final KeyVaultAuthenticationClient mKeyVaultAuthenticationClient;
+    private final static String CLIENT_ID = "f62c5ae3-bf3a-4af5-afa8-a68b800396e9";
+    private final String mClientSecret;
 
-    public LabApiAuthenticationClient(@NonNull final IConfidentialAuthClient confidentialAuthClient) {
-        mConfidentialAuthClient = confidentialAuthClient;
-        mKeyVaultAuthenticationClient = new KeyVaultAuthenticationClient(confidentialAuthClient);
-    }
 
     public LabApiAuthenticationClient(@NonNull final IConfidentialAuthClient confidentialAuthClient,
                                       @NonNull final String clientSecret) {
         mConfidentialAuthClient = confidentialAuthClient;
-        mKeyVaultAuthenticationClient = new KeyVaultAuthenticationClient(confidentialAuthClient, clientSecret);
-    }
-
-    public LabApiAuthenticationClient() {
-        this(ConfidentialAuthClientFactory.INSTANCE.getConfidentialAuthClient());
+        mClientSecret = clientSecret;
     }
 
     public LabApiAuthenticationClient(@NonNull final String clientSecret) {
@@ -71,37 +56,16 @@ public class LabApiAuthenticationClient implements IAccessTokenSupplier {
 
     @Override
     public String getAccessToken() throws LabApiException {
-        // first get token for KeyVault...because we find lab app id and secret from there
-        final String accessTokenForKeyVault = mKeyVaultAuthenticationClient.getAccessToken();
-        Configuration.getDefaultApiClient().setAccessToken(accessTokenForKeyVault);
-
-        final String labAppId, labAppSecret;
-
-        try {
-            // we are going to use the KeyVault API to obtain the Lab App client id and
-            // client secret
-            final SecretsApi secretsApi = new SecretsApi();
-            labAppId = secretsApi.getSecret(
-                    SECRET_NAME_LAB_APP_ID, SECRET_VERSION, KEY_VAULT_API_VERSION
-            ).getValue();
-
-            labAppSecret = secretsApi.getSecret(
-                    SECRET_NAME_LAB_APP_SECRET, SECRET_VERSION, KEY_VAULT_API_VERSION
-            ).getValue();
-        } catch (final ApiException e) {
-            throw new LabApiException(LabError.FAILED_TO_GET_SECRET_FROM_KEYVAULT, e);
-        }
-
         final TokenParameters tokenParameters = TokenParameters
                 .builder()
-                .clientId(labAppId)
+                .clientId(CLIENT_ID)
                 .authority(AUTHORITY)
                 .scope(SCOPE)
                 .build();
 
         // obtain token for Lab Api using the client secret retrieved from KeyVault
         final IAuthenticationResult authenticationResult = mConfidentialAuthClient.acquireToken(
-                labAppSecret, tokenParameters
+                mClientSecret, tokenParameters
         );
 
         return authenticationResult.getAccessToken();
