@@ -13,6 +13,9 @@ resources:
 pool:
   name: Hosted Windows 2019 with VS2019
 
+variables:
+  - group: MSIDLABVARS
+
 jobs:
   - job: Phase_1
     displayName: Phase 1
@@ -37,5 +40,5 @@ jobs:
         displayName: Run the unit tests.
         inputs:
           cwd: $(Build.SourcesDirectory)/common-java-root
-          tasks: LabApiUtilities:test -Psugar=true
+          tasks: LabApiUtilities:test -Psugar=true -PlabSecret=$(LabVaultAppSecret)
 ...
